@@ -373,10 +373,7 @@ module StateMachine
         # created with a set of attributes that includes this machine's
         # attribute.
         def initialize_state?(object, options)
-          if object.new_record? && !object.instance_variable_defined?('@initialized_state_machines')
-            object.instance_variable_set('@initialized_state_machines', true)
-            super
-          end
+          super if object.new_record?
         end
         
         # Defines an initialization hook into the owner class for setting the
@@ -392,7 +389,12 @@ module StateMachine
           # Hooks in to attribute initialization to set the states *prior*
           # to the attributes being set
           define_helper(:instance, :attributes=) do |machine, object, _super, new_attributes, *|
-            object.class.state_machines.initialize_states(object, :attributes => new_attributes) { _super.call }
+            if !object.instance_variable_defined?('@initialized_state_machines')
+              object.class.state_machines.initialize_states(object, :attributes => new_attributes) { _super.call }
+              object.instance_variable_set('@initialized_state_machines', true)
+            else
+              _super.call
+            end
           end
         end
         
