@@ -453,6 +453,25 @@ module SequelTest
     end
   end
   
+  class MachineMultipleTest < BaseTestCase
+    def setup
+      @model = new_model
+      DB.alter_table :foo do
+        add_column :status, :string, :default => 'idling'
+      end
+      @model.class_eval { get_db_schema(true) }
+      
+      @state_machine = StateMachine::Machine.new(@model, :initial => :parked)
+      @status_machine = StateMachine::Machine.new(@model, :status, :initial => :idling)
+    end
+    
+    def test_should_should_initialize_each_state
+      record = @model.new
+      assert_equal 'parked', record.state
+      assert_equal 'idling', record.status
+    end
+  end
+  
   class MachineWithAliasedAttributeTest < BaseTestCase
     def setup
       @model = new_model do
